fix layout margin problem with all pages

--- a/accounts/templates/registration/register.html
+++ b/accounts/templates/registration/register.html
@@ -3,6 +3,7 @@
 {% load form_tags %}
 
 {% block content %}
+<div class="main-container">
 <div class="text-center titlebackground" style="background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),url({% static 'landingsite/images/slide01.jpg' %})
         center 30% no-repeat;height:400px; ">
         <div class="row titlerow">
@@ -37,6 +38,6 @@
       </div>
       <div class="mdl-cell mdl-cell--4-col"></div>
     </div>
-
+</div>
 
 {% endblock content %}
