--- a/rsvp/templates/rsvp/event_detail.html
+++ b/rsvp/templates/rsvp/event_detail.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'rsvp/css/event_detail.css'%}">
 {% endblock css %}
 {% block content %}
+<div class="main-container">
 <div class="text-center titlebackground" style="background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),url({% static 'landingsite/images/slide01.jpg' %})
     center 30% no-repeat;height:400px; ">
     <div class="row titlerow">
@@ -70,6 +71,7 @@
         {% endif %}
     </div>
 </div>
+</div>
 <script type="text/javascript">
     $(document).ready(function(){
       $(".rsvp-submit").on('click', function(){
@@ -91,4 +93,3 @@
 
 </script>
 {% endblock content %}
-
