--- a/rsvp/templates/rsvp/user_rsvp.html
+++ b/rsvp/templates/rsvp/user_rsvp.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'rsvp/lib/fullcalendar.min.css'%}">
 {% endblock css %}
 {% block content %}
+<div class="main-container">
 <div class="text-center titlebackground" style="background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),url({% static 'landingsite/images/slide03.jpg' %})
     center 30% no-repeat;height:400px; ">
     <div class="row titlerow">
@@ -41,5 +42,5 @@
         {% endif %}
     </div>
 </div>
+</div>
 {% endblock content %}
-
