--- a/code4every1site/templates/base.html
+++ b/code4every1site/templates/base.html
@@ -2,6 +2,9 @@
 <!DOCTYPE html>
 <html class="no-js">
     <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="mobile-web-app-capable" content="yes">
         <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate, post-check=0, pre-check=0" />
         <meta http-equiv="Pragma" content="no-cache" />
@@ -73,7 +76,7 @@
         {% block css %}{% endblock css %}
     </head>
     <body>
-    <!-- Google Anaytics --> 
+    <!-- Google Anaytics -->
     <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
