--- a/rsvp/templates/rsvp/email_template.html
+++ b/rsvp/templates/rsvp/email_template.html
@@ -82,15 +82,15 @@ background-color: #f6f6f6;
 								</tr>
                 <tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;">
                   <td class="content-block" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
-									장고걸스서울 입니다. 신청하신 이벤트를 기억하시길 바라요. <b>{{ event_title }}</b> {{ event_datetime|date }} 이벤트 참석을 희망합니다. 곧 뵙기를 기대합니다!
+									장고걸스서울 입니다. 신청하신 이벤트를 기억하시길 바라요. <b>{{ event_title }}</b> {{ event_datetime }} 이벤트 참석을 희망합니다. 곧 뵙기를 기대합니다!
 									</td>
 								</tr>
                 <tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;"><td class="content-block" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
-										If you have any questions please email us at <b>seoul@djangogirls.org</b> and if you are unable to attend please unrsvp.
+										If you have any questions please email us at <b>seoul+events@djangogirls.org</b> and if you are unable to attend please unrsvp.
 									</td>
 								</tr>
                 <tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;"><td class="content-block" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
-										문의사항은 <b>seoul@djangogirls.org</b>으로 문의주세요. 만약 참석이 어려울 경우 취소신청 부탁드립니다.
+										문의사항은 <b>seoul+events@djangogirls.org</b>으로 문의주세요. 만약 참석이 어려울 경우 취소신청 부탁드립니다.
 									</td>
 								</tr>
                 <tr style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; margin: 0;"><td class="content-block" itemprop="handler" itemscope itemtype="http://schema.org/HttpActionHandler" style="font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif; box-sizing: border-box; font-size: 14px; vertical-align: top; margin: 0; padding: 0 0 20px;" valign="top">
