add chinseok coach photo

--- a/landingsite/templates/landingsite/index.html
+++ b/landingsite/templates/landingsite/index.html
@@ -87,7 +87,7 @@
                         <div class="team-1-member">
                             <img alt="Team Member" class="background-image img-circle" src="https://djangogirls.org/uploads/event/coaches/jin.jpg.160x160_q85_crop-smart.jpg ">
                             <h5>Jin Park</h5>
-                            <span>Organizer and Coach</span><br>
+                            <span>Organizer and Head Coach</span><br>
                             <ul class="social-icons">
                                 <li>
                                     <a href="http://jinpark.net">
@@ -101,7 +101,7 @@
                 <div class="row">
                     <div class="col-md-2 col-sm-4 col-md-offset-1">
                         <div class="team-1-member">
-                            <img alt="Team Member" class="background-image img-circle" src=" https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xaf1/v/t1.0-1/p160x160/12299306_989734917715180_8803150683617084057_n.jpg?oh=a4db211a5a0ae43ed9ca6c20b01cd420&oe=5720B0AD&__gda__=1457074705_38c37b56374c2bafbef17722bb677a97">
+                            <img alt="Team Member" class="background-image img-circle" src="{% static 'landingsite/images/chinseok.png' %}">
                             <h5>이진석</h5>
                             <span>Meta Coach</span><br>
                             <ul class="social-icons">
