--- a/rsvp/templates/rsvp/event_detail.html
+++ b/rsvp/templates/rsvp/event_detail.html
@@ -11,7 +11,7 @@
     <div class="row titlerow">
         <div class="col-md-12 text-center">
             <span class="text-white alt-font"> </span>
-            <h1 class="text-white"><strong>{{ event.title }}</strong></h1>
+            <h1 class="bigfont text-white"><strong>{{ event.title }}</strong></h1>
         </div>
     </div>
 </div>
