--- a/rsvp/static/rsvp/css/event_list.css
+++ b/rsvp/static/rsvp/css/event_list.css
@@ -9,6 +9,10 @@
   height: 350px;
   /*color: white;*/
 }
+.bigfont {
+    font-size: 50px;
+    line-height: 55px;
+}
 
 /*made a fixed min height for my events - looks bad if not many listed*/
 .myeventscontainer {
