--- a/rsvp/templates/rsvp/events_list.html
+++ b/rsvp/templates/rsvp/events_list.html
@@ -12,7 +12,7 @@
     <div class="row titlerow">
         <div class="col-md-12 text-center">
             <span class="text-white alt-font"> </span>
-            <h1 class="text-white"><strong>Django Girls Seoul Events</strong></h1>
+            <h1 class="bigfont text-white"><strong>Django Girls Seoul Events</strong></h1>
             <h1 class="text-white">When one teaches, two learn.</h1>
             <!--  <a name="top"></a>
                 <div class="android-be-together-section mdl-typography--text-center" style="background: url({% static 'landingsite/images/hack.jpg' %})
