added sponsors ms and psf delete maru

--- a/landingsite/templates/landingsite/index.html
+++ b/landingsite/templates/landingsite/index.html
@@ -370,10 +370,13 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6 ">
-                    <a href="http://maru180.com/pcindex.php"><img class ="sponsorimg img-responsive  center-block" src="{% static 'landingsite/images/about_maru.png' %}"></a>
+                <div class="col-md-4 ">
+                    <a href="https://www.microsoft.com/ko-kr/events/2014/meltingpot/"><img class ="sponsorimg img-responsive  center-block" src="{% static 'landingsite/images/microsoftlogo.png' %}"></a>
                 </div>
-                <div class="col-md-6 ">
+                <div class="col-md-4 ">
+                    <a href="https://www.python.org/psf/"><img class ="sponsorimg img-responsive center-block" src="{% static 'landingsite/images/python.jpeg' %}"></a>
+                </div>
+                <div class="col-md-4 ">
                     <a href="http://dcamp.kr/"><img class ="sponsorimg img-responsive center-block" src="{% static 'landingsite/images/dcamp.png' %}"></a>
                 </div>
             </div>
