adding coaches/organziers

--- a/code4every1site/templates/base.html
+++ b/code4every1site/templates/base.html
@@ -204,6 +204,9 @@
                                 <li>
                                     <p><strong>805 Applicants</strong></p>
                                 </li>
+                                <li>
+                                    <p><strong>40+ Coaches and Organizers</strong></p>
+                                </li>
                             </ul>
                         </div>
                     </div>
