add register button on event detail page

--- a/rsvp/templates/rsvp/event_detail.html
+++ b/rsvp/templates/rsvp/event_detail.html
@@ -68,6 +68,8 @@
         {% endfor %}
         <ul>
         {% endif %}
+        {% else %}
+        <a href="/accounts/register/" class="right mdl-button mdl-js-button mdl-button--raised mdl-button--colored">Register</a>
         {% endif %}
     </div>
 </div>
