--- a/accounts/templates/registration/approved_email.html
+++ b/accounts/templates/registration/approved_email.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>New Registration: {{ username }}</title>
+<title>You're Approved for Django Girls Seoul, {{ username }}</title>
 
 
 <style type="text/css">
