update numbers and footer color

--- a/code4every1site/templates/base.html
+++ b/code4every1site/templates/base.html
@@ -20,7 +20,6 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.1.1/material.indigo-pink.min.css" />
-        <link rel="stylesheet" href="{% static 'landingsite/css/styles.css' %}">
         <link rel="stylesheet" href="{% static 'landingsite/css/messages.css' %}">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300,600,700%7CRaleway:700' rel='stylesheet' type='text/css'>
         <script src="{% static 'landingsite/js/modernizr-2.6.2-respond-1.1.0.min.js' %}"></script>
@@ -36,6 +35,8 @@
         <link href="{% static 'landingsite/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css" media="all"/>
         <link href="{% static 'landingsite/css/theme.css' %}" rel="stylesheet" type="text/css" media="all"/>
         <link href="{% static 'landingsite/css/custom.css' %}" rel="stylesheet" type="text/css" media="all"/>
+        <link rel="stylesheet" href="{% static 'landingsite/css/styles.css' %}">
+
         <!--[if gte IE 9]>
         <link rel="stylesheet" type="text/css" href="css/ie9.css" />
         <![endif]-->
@@ -173,6 +174,7 @@
                             <li><a href="https://djangogirls.org/pages/coc/">Code of Conduct</a></li>
                             <li><a href="https://djangogirls.org">Global Django Girls</a></li>
                             <li><a href="https://djangogirls.org/seoul">Official Workshop Site</a></li>
+                            <li><a href="http://www.djangogirlsseoul.org/media/">Media</a></li>
                         </div>
                         <div class="col-sm-3">
                             <h3>Resources</h3>
@@ -189,20 +191,23 @@
                                 <li><a href="https://www.facebook.com/djangogirlsseoul">Facebook</a></li>
                                 <li><a href="https://twitter.com/djangogirlseoul">Twitter</a></li>
                                 <li><a href="https://github.com/djangogirlscodecamp">GitHub</a></li>
-                                <!-- <li><a href="">InstaGram</a></li> -->
+                                <li><a href="https://www.instagram.com/djangogirlsseoul/">Instagram</a></li>
                             </ul>
                         </div>
                         <div class="col-sm-3">
                             <h3>Our Numbers: </h3>
                             <ul>
                                 <li>
-                                    <p><strong>160 Attendees</strong></p>
+                                    <p><strong>300+ Attendees</strong></p>
                                 </li>
                                 <li>
-                                    <p><strong>4 Events</strong></p>
+                                    <p><strong>9 Events</strong></p>
                                 </li>
                                 <li>
-                                    <p><strong>500 Applicants</strong></p>
+                                    <p><strong>850+ Applicants</strong></p>
+                                </li>
+                                <li>
+                                    <p><strong>40+ Coaches and Organizers</strong></p>
                                 </li>
                             </ul>
                         </div>
