--- a/landingsite/static/landingsite/css/theme.css
+++ b/landingsite/static/landingsite/css/theme.css
@@ -1,5 +1,5 @@
 .bg-primary {
-  background-color: #e74c3c !important;
+  background-color: #FF9400 !important;
 }
 .bg-secondary-1 {
   background-color: #2c3e50 !important;
