--- a/landingsite/templates/landingsite/index.html
+++ b/landingsite/templates/landingsite/index.html
@@ -57,15 +57,10 @@
                     </div>
                     <div class="col-md-2 col-sm-4">
                         <div class="team-1-member">
-                            <img alt="Team Member" class="background-image img-circle" src="https://djangogirls.org/uploads/event/coaches/hassan.jpg.160x160_q85_crop-smart.jpg">
-                            <h5>Hassan Abid</h5>
-                            <span>Organizer and Coach</span><br>
+                            <img alt="Team Member" class="background-image img-circle" src="https://djangogirls.org/uploads/event/coaches/olivia.jpg.160x160_q85_crop-smart.jpg">
+                            <h5>Olivia Ha 하현주</h5>
+                            <span>Organizer</span><br>
                             <ul class="social-icons">
-                                <li>
-                                    <a href="http://hassanabid.com">
-                                    <i class="icon icon_compass"></i>
-                                    </a>
-                                </li>
                             </ul>
                         </div>
                     </div>
@@ -87,7 +82,7 @@
                         <div class="team-1-member">
                             <img alt="Team Member" class="background-image img-circle" src="https://djangogirls.org/uploads/event/coaches/jin.jpg.160x160_q85_crop-smart.jpg ">
                             <h5>Jin Park</h5>
-                            <span>Organizer and Head Coach</span><br>
+                            <span>Organizer/Head Coach</span><br>
                             <ul class="social-icons">
                                 <li>
                                     <a href="http://jinpark.net">
@@ -101,18 +96,34 @@
                 <div class="row">
                     <div class="col-md-2 col-sm-4 col-md-offset-1">
                         <div class="team-1-member">
-                            <img alt="Team Member" class="background-image img-circle" src="{% static 'landingsite/images/chinseok.png' %}">
-                            <h5>이진석</h5>
-                            <span>Meta Coach</span><br>
+                            <img alt="Team Member" class="background-image img-circle" src="https://djangogirls.org/uploads/event/coaches/listen.jpg.160x160_q85_crop-smart.jpg">
+                            <h5>이소은</h5>
+                            <span>Organizer/Meta Coach</span><br>
                             <ul class="social-icons">
+                                <li>
+                                    <a href="">
+                                    <i class="icon icon_compass"></i>
+                                    </a>
+                                </li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-md-2 col-sm-4">
                         <div class="team-1-member">
+                            <img alt="Team Member" class="background-image img-circle" src="https://djangogirls.org/uploads/event/coaches/IMG_20160519_151421.jpg.160x160_q85_crop-smart.jpg">
+                            <h5>송다운</h5>
+                            <span>Organizer</span><br>
+                            <ul class="social-icons">
+                            </ul>
+                        </div>
+                    </div>
+                  </div>
+                <div class="row">
+                    <div class="col-md-2 col-sm-4 col-md-offset-1">
+                        <div class="team-1-member">
                             <a href="http://jangho.github.io/">
-                                <img alt="Team Member" class="background-image img-circle" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAUuAAAAJGRiNDk3YmUyLTNjY2MtNDQyYS04MjJkLTYzZmU4Y2EyM2Y5OQ.jpg">
-                                <h5>최장호</h5>
+                                <img alt="Team Member" class="background-image img-circle" src="https://djangogirls.org/uploads/event/coaches/joeun.jpeg.160x160_q85_crop-smart.jpeg">
+                                <h5>박조은</h5>
                             </a>
                             <span>Coach</span><br>
                             <ul class="social-icons">
@@ -121,8 +132,8 @@
                     </div>
                     <div class="col-md-2 col-sm-4">
                         <div class="team-1-member">
-                            <img alt="Team Member" class="background-image img-circle" src="{% static 'landingsite/images/team-small-4.png' %}">
-                            <h5>김신영</h5>
+                            <img alt="Team Member" class="background-image img-circle" src="https://djangogirls.org/uploads/event/coaches/jelly.jpg.160x160_q85_crop-smart.jpg">
+                            <h5>최현묵</h5>
                             <span>Coach</span><br>
                             <ul class="social-icons">
                             </ul>
@@ -130,8 +141,8 @@
                     </div>
                     <div class="col-md-2 col-sm-4">
                         <div class="team-1-member">
-                            <img alt="Team Member" class="background-image img-circle" src="https://djangogirls.org/uploads/event/coaches/hyeonjung.JPG.160x160_q85_crop-smart.JPG ">
-                            <h5>이현정</h5>
+                            <img alt="Team Member" class="background-image img-circle" src="https://djangogirls.org/uploads/event/coaches/hyeonmi.jpeg.160x160_q85_crop-smart.jpeg">
+                            <h5>김현미</h5>
                             <span>Coach</span><br>
                             <ul class="social-icons">
                             </ul>
@@ -139,9 +150,18 @@
                     </div>
                     <div class="col-md-2 col-sm-4">
                         <div class="team-1-member">
-                            <img alt="Team Member" class =" img-circle" src="https://djangogirls.org/uploads/event/coaches/moonseong.jpg.160x160_q85_crop-smart.jpg"></a>
-                            <h5>강문성</h5>
+                            <img alt="Team Member" class =" img-circle" src="https://djangogirls.org/uploads/event/coaches/hassan.jpg.160x160_q85_crop-smart.jpg"></a>
+                            <h5>Hassan Abid</h5>
                             <span>Coach</span>
+                            <ul class="social-icons">
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md-2 col-sm-4">
+                        <div class="team-1-member">
+                            <img alt="Team Member" class="background-image img-circle" src="https://djangogirls.org/uploads/event/coaches/yang_mirim.png.160x160_q85_crop-smart.png">
+                            <h5>양미림</h5>
+                            <span>Coach</span><br>
                             <ul class="social-icons">
                             </ul>
                         </div>
