Fix wrong syntax

--- a/code4every1site/templates/base.html
+++ b/code4every1site/templates/base.html
@@ -215,7 +215,7 @@
                 </div>
             </footer>
         </div>
-        <script src="https://www.youtube.com/iframe_api' %}"></script>
+        <script src="https://www.youtube.com/iframe_api"></script>
         <script src="{% static 'landingsite/js/jquery.min.js' %}"></script>
         <script src="{% static 'landingsite/js/jquery.plugin.min.js' %}"></script>
         <script src="{% static 'landingsite/js/bootstrap.min.js' %}"></script>
