--- a/code4every1site/templates/base.html
+++ b/code4every1site/templates/base.html
@@ -97,10 +97,10 @@
             <nav class="top-bar overlay-bar">
                 <div class="container">
                     <div class="row nav-menu">
-                        <div class="col-md-3 col-sm-3 columns">
+                        <a href="/" class="col-md-3 col-sm-3 columns">
                             <img class="logo logo-light" alt="Logo" src="{% static 'landingsite/images/dgseoul-transparent-orange.png' %}">
                             <img class="logo logo-dark" alt="Logo" src="{% static 'landingsite/images/dgseoul-transparent-orange.png' %}">
-                        </div>
+                        </a>
                         <div class="col-md-9 col-sm-9 columns">
                             <ul class="menu">
                                 <li><a href="/#team">About Us</a></li>
@@ -170,11 +170,12 @@
                         <div class="col-sm-3">
                             <h3>Django Girls Seoul</h3>
                             <ul>
-                            <li><a href="mailto:seoul@djangogirls.org">seoul@djangogirls.org</a></li>
-                            <li><a href="https://djangogirls.org/pages/coc/">Code of Conduct</a></li>
-                            <li><a href="https://djangogirls.org">Global Django Girls</a></li>
-                            <li><a href="https://djangogirls.org/seoul">Official Workshop Site</a></li>
-                            <li><a href="http://www.djangogirlsseoul.org/media/">Media</a></li>
+                                <li><a href="mailto:seoul@djangogirls.org">seoul@djangogirls.org</a></li>
+                                <li><a href="https://djangogirls.org/pages/coc/">Code of Conduct</a></li>
+                                <li><a href="https://djangogirls.org">Global Django Girls</a></li>
+                                <li><a href="https://djangogirls.org/seoul">Official Workshop Site</a></li>
+                                <li><a href="http://www.djangogirlsseoul.org/media/">Media</a></li>
+                            </ul>
                         </div>
                         <div class="col-sm-3">
                             <h3>Resources</h3>
